--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://dharFr.github.com
+url: http://www.dhar.fr
 title: dhar's blog
 subtitle: O. Audard personnal blog.
 author: Olivier Audard
@@ -78,7 +78,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: 101349134484478418778
 googleplus_hidden: false
 
 # Pinboard
@@ -94,7 +94,7 @@ disqus_short_name:
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-1823374-1
 
 # Facebook Like
 facebook_like: false
