--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://www.dhar.fr
-title: dhar's blog
-subtitle: O. Audard personnal blog.
+title: dhar's Blog
+subtitle: My personnal blog. Mostly Web Dev stuff...
 author: Olivier Audard
 simple_search: http://google.com/search
 description:
@@ -90,7 +90,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: dhar
 disqus_show_comment_count: false
 
 # Google Analytics
