--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ github_skip_forks: true
 twitter_user: _dhar
 twitter_tweet_count: 5
 twitter_show_replies: false
-twitter_follow_button: true
+twitter_follow_button: false
 twitter_show_follower_count: false
 twitter_tweet_button: true
 
