--- a/_config.yml
+++ b/_config.yml
@@ -49,11 +49,11 @@ titlecase: true       # Converts page and post titles to titlecase
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
 #default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
-default_asides: [asides/aboutmetwitter.html, asides/recent_posts.html, asides/github.html, asides/twitter.html]
+default_asides: [asides/aboutmetwitter.html, asides/recent_posts.html, custom/asides/pages.html, asides/github.html, asides/twitter.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
-# blog_index_asides:
+blog_index_asides: [asides/aboutmetwitter.html, custom/asides/pages.html, asides/github.html, asides/twitter.html]
 # post_asides:
 # page_asides:
 
@@ -97,7 +97,7 @@ disqus_short_name: dhar
 disqus_show_comment_count: false
 
 # Google Analytics
-#google_analytics_tracking_id: UA-1823374-1
+google_analytics_tracking_id: UA-1823374-1
 
 # Facebook Like
 facebook_like: false
